# movie_memo

./: .gitignore  Cargo.toml  Readme.md
crates/db/: Cargo.toml
crates/db/src/: connection.rs  lib.rs
crates/db/src/errors/: already_exists.rs  mod.rs
crates/db/src/schemas/: mod.rs  movie.rs  user.rs  user_movies.rs
design/db/: movie_lists.puml
migrations/: 20230220051325_baseline.sql
requests/: playground.http
requests/user/: create_user.http
requests/user_movie/: create_user_movie.http  get_user_movies.http
src/: main.rs
src/error/: friendly.rs
